Closed
Bug 1601527
Opened 6 years ago
Closed 6 years ago
pinch zoom on touch pad on mac with apz.allow_zooming hits assert on some pages
Categories
(Core :: Panning and Zooming, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla73
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
On mac, Steps to reproduce:
- Enable
apz.allow_zoominginabout:config. - Use the touchpad pinch gesture to zoom in on gmail.com or new reddit.com on a comment page
Actual results:
fatal assert
In a debug build I hit this assert
| Assignee | ||
Comment 1•6 years ago
|
||
Otherwise we hit this assert
The adjusting mentioned in that comment doesn't seem to happen on the path that macOS pinch gesture events use.
Updated•6 years ago
|
Assignee: nobody → tnikkel
Updated•6 years ago
|
Attachment #9113700 -
Attachment description: Bug 1601527. In APZCTreeManager::ReceiveInputEvent for pinch gesture inputs adjust the target apzc to the root content. r?botond → Bug 1601527. In APZCTreeManager::ReceiveInputEvent for pinch gesture inputs adjust the target apzc to the root content. r=botond
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/da886999c5b7
In APZCTreeManager::ReceiveInputEvent for pinch gesture inputs adjust the target apzc to the root content. r=botond
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in
before you can comment on or make changes to this bug.
Description
•