Bug 1601527. In APZCTreeManager::ReceiveInputEvent for pinch gesture inputs adjust the target apzc to the root content. r=botond

Otherwise we hit this assert

https://searchfox.org/mozilla-central/rev/efdf9bb55789ea782ae3a431bda6be74a87b041e/gfx/layers/apz/src/AsyncPanZoomController.cpp#1209

The adjusting mentioned in that comment doesn't seem to happen on the path that macOS pinch gesture events use.

Differential Revision: https://phabricator.services.mozilla.com/D55917